Index UI: Added air for the grid on big laptops. Filter layout changed to cover full width with bacground and prevent overflow when scrolling.

--- a/app/scss/application.scss
+++ b/app/scss/application.scss
@@ -33,10 +33,10 @@
 	background-color: rgba(255,0,0,.1);
 	pointer-events: none;
 
-	position: absolute;
-	width: 260px;
-	height: 100%;
+	position: fixed;
+	width: 100%;
+	height: 65px;
 
-	bottom: 0;
+	top: 0;
 	right: 0;
 }
