--- a/app/scss/global/_default.scss
+++ b/app/scss/global/_default.scss
@@ -102,7 +102,8 @@ canvas{
 			top: 50px;
 		}
 
-		@media (min-width: 1441px){
+		// @media (min-width: 1441px){
+		@include bigdesktop {
 			top: 78px;
 		}
 
