--- a/app/scss/global/_grid.scss
+++ b/app/scss/global/_grid.scss
@@ -4,12 +4,19 @@
 	// padding-left: 14.6%;
 	// padding-right: 6.7%;
 	width: 100%;
-	max-width: 1400px;
+	// max-width: 1100px;
+	max-width: 400px;
 	margin: 0 auto;
+
 	@include desktop {
+		max-width: 1100px;
 		padding-left: 7.3%;
 		padding-right: 3.3%;
 	}
+	@include fulldesktop {
+		// max-width: 1400px;
+	}
+
 	@media (min-width: 1441px){
 		padding-top: 220px;
 	}
@@ -17,6 +24,7 @@
 	@media (min-width: 1700px){
 		padding-left: 0;
 		padding-right: 0;
+		max-width: 1400px;
 	}
 
 	.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12{
